# android-demo-app

NativeApp/: make_warp_perspective_pt.py
NativeApp/app/: CMakeLists.txt  build.gradle
NativeApp/app/src/main/: AndroidManifest.xml
NativeApp/app/src/main/cpp/: pytorch_nativeapp.cpp
NativeApp/app/src/main/java/org/pytorch/nativeapp/: MainActivity.java
